src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Aggregate_Column_Sequence__c</fullName>
        <label>Aggregate Column Sequence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aggregate_Column__c</fullName>
        <label>Aggregate Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Row_Sequence__c</fullName>
        <label>Aggregate Row Sequence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aggregate_Row__c</fullName>
        <label>Aggregate Row</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Products</relationshipLabel>
        <relationshipName>Child_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spotlight_Location_Key__c</fullName>
        <label>Spotlight Location Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>